minor adjustments to wording of paragraphs - grammar and clarity

--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -6,9 +6,9 @@ bibliography: references.bib
 
 ### [**Introduction**]{.underline}
 
-*Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket; males of the species use a calling song to attract a female mate. The signalling song produced by males is facilitated by the orthopteran insect's forewings and antennae and works via the principles of sexual signalling to attract a female mate [@subramaniam1990]. It has been found that the duration of the song produced is influential, with females being drawn to and preferring to mate with individuals that can produce a longer song [@kiflawi2000]. In fact, the song can be so alluring to the female that, if other crickets' songs can be heard nearby, a male cricket will increasingly engage in mate guarding behaviours - actions such as isolating the mated female in a burrow work to ensure paternity by preventing the female from mating multiple times [@bateman1999]. Not only does a male's song work to attract females and dissuade possible rival males, but female *Gryllodes sigillatus* crickets exposed to the acoustic displays of their own species reach their full mass quicker than females exposed to either heterospecific songs from different species or no songs at all [@bateman2005]. This would mean that the females are able to reach sexual maturity quicker when in the presence of viable mates.
+*Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket; males of the species use a calling song to attract a female mate. The signalling song produced by males is facilitated by the orthopteran insect's forewings and antennae, working as a sexual signalling display to attract a female mate [@subramaniam1990]. It has been found that the duration of the song produced is influential, with females being drawn to and preferring to mate with individuals that can produce a longer song [@kiflawi2000]. In fact, the song can be so alluring to the female that, if other crickets' songs can be heard nearby, a male cricket will increasingly engage in mate guarding behaviours - actions such as isolating the mated female in a burrow work to ensure paternity by preventing the female from mating multiple times [@bateman1999]. Not only does a male's song work to attract females and dissuade possible rival males, but female *Gryllodes sigillatus* crickets exposed to the acoustic displays of their own species reach their full mass quicker than females exposed to either heterospecific songs from different species or no songs at all [@bateman2005]. This would mean that the females are able to reach sexual maturity quicker when in the presence of viable mates.
 
-Due to the importance of sexual signalling displays for a cricket's ability to reproduce, this paper aims to look at factors that can influence singing ability, more specifically, the affects of nutrition on male individuals. I hypothesize that males with a more nutritious diet will have a greater increase in weight. As a result of this, I also predict that individuals will sing for a greater duration if their diet has a greater nutritional percentage, as more resources can be allocated to the costly signalling act.
+Due to the importance of sexual signalling displays for a cricket's ability to reproduce, this paper aims to look at factors that can influence singing ability, specifically the affects of nutrition on male individuals. I hypothesize that males with a more nutritious diet will have a greater increase in weight. As a result of this, I also predict that individuals will sing for a greater duration if their diet has a greater nutritional percentage, as more resources can be allocated to the costly signalling act.
 
 ### [**Analysis**]{.underline}
 
@@ -24,7 +24,7 @@ A secondary ordinary least squares linear model was created to assess the weight
 
 ##### **DIET AND WEIGHT CHANGE**
 
-I hypothesized that the greater the nutritional percentage of a cricket's diet, the more weight it would gain over the course of the observational period (1 week). To test this, I compared weight change to differing percentages of dietary nutrition using an ordinary least squares linear model where nutritional percentages from 12-84% increasing in increments of 12 were used as a predictor variable for weight change in grams over the course of a week. The changes in weight ranged from a loss of 0.0578g to a gain of 0.0868g, and it was found that a cricket gained 0.00596 grams [95% CI; 0.00553-0.00639] for each 12% increase in nutrition (Linear Model: *T*~1,537~ =13.9, *P*\<0.001). This confirms the hypothesis and is consistent with established knowledge on insect diet and nutrition - greater nutrition leads to an increase in growth, but resources can only be put towards processes such as growth, reproduction, and complex behaviours when an individual takes in enough nutrition to first cover the essential basic processes for life [@jr.1982].
+I hypothesized that the greater the nutritional percentage of a cricket's diet, the more weight it would gain over the course of the observational period (1 week). To test this, I compared weight change to differing percentages of dietary nutrition using an ordinary least squares linear model where nutritional percentages from 12-84% increasing in increments of 12 were used as a predictor variable for weight change in grams over the course of a week. The changes in weight ranged from a loss of 0.0578g to a gain of 0.0868g, and it was found that a cricket gained 0.00596 grams [95% CI; 0.00553-0.00639] for each 12% increase in nutrition (Linear Model: *T*~1,537~ =13.9, *P*\<0.001). This confirms the hypothesis and is consistent with established knowledge on insect diet and nutrition - greater nutrition leads to an increase in growth as resources can only be put towards processes such as growth, reproduction, and complex behaviours when an individual takes in enough nutrition to first cover the essential basic processes for life [@jr.1982].
 
 ```{r, echo=FALSE}
 knitr::include_graphics("../Graphs/dw_means_april23.png")
@@ -35,9 +35,9 @@ knitr::include_graphics("../Graphs/dw_means_april23.png")
 
 ##### **DIET AND SONG DURATION**
 
-Based on the results above which illustrated a greater weight gain in crickets with a better diet, I further hypothesized that the group with higher nutrition would also have a greater song duration, likely due to an increased amount of resources to allocate to the costly action. To test this, I used an ordinary least squares linear model to compare song duration of crickets consuming diets of differing nutritional percentages, with diet as a predictor variable for total song duration in seconds over a week of observation. This showed that for each percentage increase in nutrition, the cricket sang for 0.031 seconds longer [95% CI; 0.025-0.037], meaning for each 12% incremental increase in dietary nutrition, song duration was extended by 0.37 seconds (Linear Model: *T*~1,536~ =5.26, *P*\<0.001) . Illustrated in Fig. 2, the mean song duration for those with a low nutritional intake (≤36% ) is 4.513 seconds, rising to an average of 7.393 for crickets with a high nutritional intake (≥60%).
+Based on the results above which illustrated a greater weight gain in crickets with a better diet, I further hypothesized that the group with higher nutrition would also have a greater song duration. This would likely be due to an increased amount of resources, meaning that once essential metabolic processes had been covered, more surplus energy would be available to allocate to the costly signalling action. To test this, I used an ordinary least squares linear model to compare song duration of crickets consuming diets of differing nutritional percentages, with diet as a predictor variable for total song duration in seconds over a week of observation. This showed that for each percentage increase in nutrition, the cricket sang for 0.031 seconds longer [95% CI; 0.025-0.037], meaning for each 12% incremental increase in dietary nutrition, song duration was extended by 0.37 seconds (Linear Model: *T*~1,536~ =5.26, *P*\<0.001) . Illustrated in Fig. 2, the mean song duration for those with a low nutritional intake (≤36% ) is 4.513 seconds, rising to an average of 7.393 for crickets with a high nutritional intake (≥60%).
 
-This is consistent with previous knowledge, as acoustic production in crickets is a highly energetic process, which would require an abundance of resources derived from diet.
+This is consistent with the previous knowledge on resource allocation [@ketola2009], as acoustic production in crickets is a highly energetic process which would require an abundance of resources derived from diet.
 
 ```{r, echo=FALSE}
 knitr::include_graphics("../Graphs/dd_means_april23.png")
@@ -50,7 +50,7 @@ knitr::include_graphics("../Graphs/dd_means_april23.png")
 
 Song length is significant as a male cricket's ability to sing for a greater duration than their peers has a great impact on their fitness, something which is facilitated by their nutrition. A longer song would suggest a greater chance of mating through the principles of sexual selection.
 
-Males of a species competing against each other for the opportunity to mate with a female is a common occurrence in nature [@cox1977]. These competitions can manifest as direct antagonism where males get into a physical conflict. Such is the case with red deer, as growing larger antlers to fight with correlates to a greater level of reproductive success [@kruuk2002]. The other way that males can outshine their peers is through courtship displays which are aimed to impress the females, as is true of the singing behaviour found in *Gryllodes sigillatus*. Another well-known example of this includes male birds such as peacocks sporting a large ornamental plumage. In the wild, this colourful addition could be seen as a counter-intuitive for survival, making it more difficult to hide from and escape predators [@burk1982]. The same could be said for the cricket - producing a loud acoustic for an extended time could alert predators to the individual's location. However, this is exactly why it is so attractive to females of the species - If an individual can survive despite their handicap they must be of good fitness, a quality that females will want to pass on to their offspring [@andersson1986].
+Males of a species competing against each other for the opportunity to mate with a female is a common occurrence in nature [@cox1977]. These competitions can manifest as direct antagonism where males get into a physical conflict. Such is the case with red deer, as growing larger antlers to fight with correlates to a greater level of reproductive success [@kruuk2002]. The other way that males can outshine their peers is through courtship displays which are aimed to impress the females, as is true of the singing behaviour found in *Gryllodes sigillatus*. Another well-known example of this includes male birds such as peacocks sporting a large ornamental plumage. In the wild, this colourful addition could be seen as a counter-intuitive for survival, making it more difficult to hide from and escape predators [@burk1982]. The same could be said for the cricket - producing a loud acoustic for an extended time could alert predators to the individual's location. However, this is exactly why it is so attractive to females of the species - If an individual can survive despite their handicap they must be of good fitness, a quality that females will want to pass on to their offspring [@andersson1986]. Individuals of greater fitness are more desireable mates, so acts that can display a male's fitness to females are crucial to their reproductive success, which includes song production in crickets.
 
 ```{r, echo=FALSE}
 knitr::include_graphics("../Graphs/triple_gradient_april23.png")
@@ -59,9 +59,9 @@ knitr::include_graphics("../Graphs/triple_gradient_april23.png")
 
 Fig.3 - The total song duration in seconds produced over 1 week by male decorated crickets (n=481) in regards to their change in weight (g) and the nutritional percentage of their diet. The colour of each point corresponds to the percentage of nutrition in the cricket's diet from 12-84%, on a scale where red=low and green=high.
 
-Due to the reproductive repercussions of song duration, the factors that allow a cricket to sing for longer are highly significant to their fitness and the proliferation of their genes. Subsequently, maintaining a nutritious diet is important for the success of male crickets as it not only facilitates weight gain, but also corresponds to an increased song length, likely due to an increased availability of energy to expend. Both of these results increase a male cricket's chance of winning over a mate, as not only are female *Gryllodes sigillatus* attracted to longer acoustic displays, they prefer the songs of bigger individuals [@kiflawi2000]. Whilst this was found to be true in regards to weight in this data, wherein crickets gaining more mass generally produced a longer song, it was seen that size in terms of a cricket's length did not have a significant influence over song duration which may be a downfall of the data and require further investigation.
+As this investigation found that greater nutrition corresponds with an increased song duration, maintaining a quality diet is important for the success of male crickets. Nutrition also facilitates weight gain which also increases a male\'s chance of winning over a mate, as not only are female Gryllodes sigillatus attracted to longer acoustic displays, but they also prefer the songs of bigger individuals [@kiflawi2000]. Whilst this was found to be true in regards to weight in this data, wherein the crickets consuming a more nutritional diet were both gaining more mass and generally producing a longer song, it was seen that size in terms of a cricket\'s length did not have a significant influence over song duration which may be a downfall of the data and require further investigation.
 
-In this investigation, it was found that crickets with a greater level of nutrition in their diet will become larger in terms of mass and also produce a longer song on average. It can be inferred from this that song duration is what indicates to the female a male's fitness, and therefore a longer song will increase an individual's chances of attracting a mate. In this way, nutrition has an influence over the reproductive success of male *Gryllodes sigillatus* , most probably due to an increased availability of resources available for complex behaviours once basic energetic needs are met*.*
+It could be concluded from these results that the length of song produced by Gryllodes sigillatus males is what indicates their fitness and therefore potential as a mate to females of the species, therefore a longer song would increase an individual\'s chance of mating. It is known from previous research that Gryllodes sigillatus individuals with a greater level of fitness require lower metabolic maintenance and are also better able to allocate resources [@ketola2009]. This means that fitter individuals would have more surplus resources to put towards the production of a signalling song, especially when on a highly nutritious diet. In this way, nutrition has an influence over the reproductive success of male Gryllodes sigillatus, due to an increased availability of resources available for complex mating behaviours once basic energetic needs are met.
 
 ### [**References**]{.underline}
 
