--- a/Scripts/references.bib
+++ b/Scripts/references.bib
@@ -197,3 +197,18 @@ url = {https://journals.co.za/doi/abs/10.10520/EJC17961},
 	doi = {10.2307/3494145},
 	url = {http://dx.doi.org/10.2307/3494145}
 }
+
+@article{ketola2009,
+	title = {Inbreeding, energy use and condition},
+	author = {Ketola, T. and Kotiaho, J. S.},
+	year = {2009},
+	month = {04},
+	date = {2009-04},
+	journal = {Journal of Evolutionary Biology},
+	pages = {770--781},
+	volume = {22},
+	number = {4},
+	doi = {10.1111/j.1420-9101.2009.01689.x},
+	url = {http://dx.doi.org/10.1111/j.1420-9101.2009.01689.x},
+	langid = {en}
+}
