explaining why packages were used

--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -20,6 +20,8 @@ I used an ordinary least squares linear model to analyse song duration, looking 
 
 A secondary ordinary least squares linear model was created to assess the weight change of crickets with the nutritional percentage of their diet as a categorical predictor. This was done in order to address the hypothesis that diet has an impact on weight change.
 
+The following packages were used during the data analysis and visualisation process: tidyverse to transform and present data [@tidyverse], colorBlindness to check plot accessibility [@colorBlindness], rstatix for statistical tests [@rstatix], performance for evaluating the fit of models [@performance], MASS to perform boxcox function [@MASS], broom to tidy data and outputs [@broom], and patchwork to combine multiple plots into single visuals [@patchwork].
+
 ### [**Results & Discussion**]{.underline}
 
 ##### **DIET AND WEIGHT CHANGE**
@@ -59,10 +61,8 @@ knitr::include_graphics("../Graphs/triple_gradient_april23.png")
 
 Fig.3 - The total song duration in seconds produced over 1 week by male decorated crickets (n=481) in regards to their change in weight (g) and the nutritional percentage of their diet. The colour of each point corresponds to the percentage of nutrition in the cricket's diet from 12-84%, on a scale where red=low and green=high.
 
-As this investigation found that greater nutrition corresponds with an increased song duration, maintaining a quality diet is important for the success of male crickets. Nutrition also facilitates weight gain which also increases a male\'s chance of winning over a mate, as not only are female Gryllodes sigillatus attracted to longer acoustic displays, but they also prefer the songs of bigger individuals [@kiflawi2000]. Whilst this was found to be true in regards to weight in this data, wherein the crickets consuming a more nutritional diet were both gaining more mass and generally producing a longer song, it was seen that size in terms of a cricket\'s length did not have a significant influence over song duration which may be a downfall of the data and require further investigation.
+As this investigation found that greater nutrition corresponds with an increased song duration, maintaining a quality diet is important for the success of male crickets. Nutrition also facilitates weight gain which also increases a male's chance of winning over a mate, as not only are female *Gryllodes sigillatus* attracted to longer acoustic displays, but they also prefer the songs of bigger individuals [@kiflawi2000]. Whilst this was found to be true in regards to weight in this data, wherein the crickets consuming a more nutritional diet were both gaining more mass and generally producing a longer song, it was seen that size in terms of a cricket's length did not have a significant influence over song duration which may be a downfall of the data and require further investigation.
 
-It could be concluded from these results that the length of song produced by Gryllodes sigillatus males is what indicates their fitness and therefore potential as a mate to females of the species, therefore a longer song would increase an individual\'s chance of mating. It is known from previous research that Gryllodes sigillatus individuals with a greater level of fitness require lower metabolic maintenance and are also better able to allocate resources [@ketola2009]. This means that fitter individuals would have more surplus resources to put towards the production of a signalling song, especially when on a highly nutritious diet. In this way, nutrition has an influence over the reproductive success of male Gryllodes sigillatus, due to an increased availability of resources available for complex mating behaviours once basic energetic needs are met.
+It could be concluded from these results that the length of song produced by *Gryllodes sigillatus* males is what indicates their fitness and therefore potential as a mate to females of the species, so a longer song would increase an individual's chance of mating. It is known from previous research that individuals with a greater level of fitness require lower metabolic maintenance and are also better able to allocate resources [@ketola2009]. This means that fitter individuals would have more surplus resources to put towards the production of a signalling song, especially when on a highly nutritious diet. In this way, nutrition has an influence over the reproductive success of male *Gryllodes sigillatus*, due to an increased availability of resources available for complex mating behaviours once basic energetic needs are met.
 
 ### [**References**]{.underline}
-
-This report was produced using R version 4.2.3 [@R] The following packages were used during the data analysis and visualisation process: tidyverse [@tidyverse], colorBlindness [@colorBlindness], rstatix [@rstatix], performance [@performance], MASS [@MASS], broom [@broom] and patchwork [@patchwork].
