--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -6,9 +6,9 @@ bibliography: references.bib
 
 ### [**Introduction**]{.underline}
 
-*Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket; males of the species use a calling song to attract a female mate. The signalling song produced by males is facilitated by the orthopteran insect's forewings and antennae, working as a sexual signalling display to attract a female mate [@subramaniam1990]. It has been found that the duration of the song produced is influential, with females being drawn to and preferring to mate with individuals that can produce a longer song [@kiflawi2000]. In fact, the song can be so alluring to the female that, if other crickets' songs can be heard nearby, a male cricket will increasingly engage in mate guarding behaviours - actions such as isolating the mated female in a burrow work to ensure paternity by preventing the female from mating multiple times [@bateman1999]. Not only does a male's song work to attract females and dissuade possible rival males, but female *Gryllodes sigillatus* crickets exposed to the acoustic displays of their own species reach their full mass quicker than females exposed to either heterospecific songs from different species or no songs at all [@bateman2005]. This would mean that the females are able to reach sexual maturity quicker when in the presence of viable mates.
+*Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket; males of the species use a calling song to attract a female mate. The signalling song produced by males is facilitated by the orthopteran insect's forewings and antennae, working as a sexual signalling display to attract a female mate [@subramaniam1990]. It has been found that the duration of the song produced is influential, with females being drawn to and preferring to mate with individuals that can produce a longer song [@kiflawi2000]. The song can be so alluring to the female that if other crickets' songs can be heard nearby, a male cricket will increasingly engage in mate guarding behaviours - actions such as isolating the mated female in a burrow work to ensure paternity by preventing the female from mating multiple times [@bateman1999]. Not only does a male's song work to attract females and dissuade possible rival males, but female *Gryllodes sigillatus* crickets exposed to the acoustic displays of their own species reach their full mass quicker than females exposed to either heterospecific songs from different species or no songs at all [@bateman2005]. This would mean that the females can reach sexual maturity quicker when in the presence of viable mates.
 
-Due to the importance of sexual signalling displays for a cricket's ability to reproduce, this paper aims to look at factors that can influence singing ability, specifically the affects of nutrition on male individuals. I hypothesize that males with a more nutritious diet will have a greater increase in weight. As a result of this, I also predict that individuals will sing for a greater duration if their diet has a greater nutritional percentage, as more resources can be allocated to the costly signalling act.
+Due to the importance of sexual signalling displays for a cricket's ability to reproduce, this paper aims to look at factors that can influence singing ability, specifically the effects of nutrition on male individuals. I hypothesize that males with a more nutritious diet will have a greater increase in weight. As a result of this, I also predict that individuals will sing for a greater duration if their diet has a greater nutritional percentage, as more resources can be allocated to the costly signalling act.
 
 ### [**Analysis**]{.underline}
 
@@ -33,7 +33,7 @@ knitr::include_graphics("../Graphs/dw_means_april23.png")
 
 ```
 
-**Fig.1 - LEFT**: Weight gain (grams) in *Gryllodes sigillatus* increases with the nutritional percentage of the crickets diet (12-84%) over the observational period of one week (n=539). The region highlighted in red represents a loss of weight while the green region conversely represents weight gain. The median, interquartile range, and range for each nutritional percentage are respectively illustrated by the middle line, box, and whiskers on their plot. Outliers are represented by circular plots. **RIGHT:** The mean weight change in grams is presented to 3 significant figures for each nutritional category - Low (≤36%), Medium(=48%), and High(≥60%). Error bars extend one standard deviation above and below the mean.
+**Fig.1 - LEFT**: Weight gain (grams) in *Gryllodes sigillatus* increases with the nutritional percentage of the crickets diet (12-84%) over the observational period of one week (n=539). Each 12% increase in nutrition was shown to correspond with an additional weight gain of 0.00596 grams [95% CI; 0.00553-0.00639]. The region highlighted in red represents a loss of weight while the green region conversely represents weight gain. The median, interquartile range, and range for each nutritional percentage are respectively illustrated by the middle line, box, and whiskers on their plot. Outliers are represented by circular plots. **RIGHT:** The mean weight change in grams is presented to 3 significant figures for each nutritional category - Low (≤36%), Medium(=48%), and High(≥60%). Error bars extend one standard deviation above and below the mean.
 
 ##### **DIET AND SONG DURATION**
 
@@ -46,13 +46,13 @@ knitr::include_graphics("../Graphs/dd_means_april23.png")
 
 ```
 
-**Fig. 2 - LEFT:** The nutritional percentage of a crickets diet increases the total length of time (in seconds) spent singing over the observational period of 1 week. The background colours surrounding the boxes show the nutritional category of the diet; red representing Low, orange for Medium, and green for High. The median, interquartile range, and range for each nutritional percentage are respectively illustrated by the middle line, box, and whiskers on their plot. Outliers are shown as circular filled plots. **RIGHT:** The mean song duration in seconds is presented to 4 significant figures for each nutritional category - Low (≤36%), Medium(=48%), and High(≥60%). Error bars extend one standard deviation above and below the mean.
+**Fig. 2 - LEFT:** The nutritional percentage of a crickets diet increases the total length of time (in seconds) spent singing over the observational period of 1 week. Each 12% increase in nutrition lengthened song duration by 0.37 seconds [95% CI; 0.30-0.44]. The background colours surrounding the boxes show the nutritional category of the diet; red representing Low, orange for Medium, and green for High. The median, interquartile range, and range for each nutritional percentage are respectively illustrated by the middle line, box, and whiskers on their plot. Outliers are shown as circular filled plots. **RIGHT:** The mean song duration in seconds is presented to 4 significant figures for each nutritional category - Low (≤36%), Medium(=48%), and High(≥60%). Error bars extend one standard deviation above and below the mean.
 
 ##### **SIGNIFICANCE AND CONCLUSIONS**
 
 Song length is significant as a male cricket's ability to sing for a greater duration than their peers has a great impact on their fitness, something which is facilitated by their nutrition. A longer song would suggest a greater chance of mating through the principles of sexual selection.
 
-Males of a species competing against each other for the opportunity to mate with a female is a common occurrence in nature [@cox1977]. These competitions can manifest as direct antagonism where males get into a physical conflict. Such is the case with red deer, as growing larger antlers to fight with correlates to a greater level of reproductive success [@kruuk2002]. The other way that males can outshine their peers is through courtship displays which are aimed to impress the females, as is true of the singing behaviour found in *Gryllodes sigillatus*. Another well-known example of this includes male birds such as peacocks sporting a large ornamental plumage. In the wild, this colourful addition could be seen as a counter-intuitive for survival, making it more difficult to hide from and escape predators [@burk1982]. The same could be said for the cricket - producing a loud acoustic for an extended time could alert predators to the individual's location. However, this is exactly why it is so attractive to females of the species - If an individual can survive despite their handicap they must be of good fitness, a quality that females will want to pass on to their offspring [@andersson1986]. Individuals of greater fitness are more desireable mates, so acts that can display a male's fitness to females are crucial to their reproductive success, which includes song production in crickets.
+Males of a species competing against each other for the opportunity to mate with a female is a common occurrence in nature [@cox1977; @lande1981; @andersson1994]. These competitions can manifest as direct antagonism where males get into a physical conflict. Such is the case with red deer, as growing larger antlers to fight with correlates to a greater level of reproductive success [@kruuk2002]. The other way that males can outshine their peers is through courtship displays which are aimed to impress the females, as is true of the singing behaviour found in *Gryllodes sigillatus*. Another well-known example of this includes male birds such as peacocks sporting a large ornamental plumage, a trait which is selected for by female choice [@lande1981]. In the wild, this colourful addition could be seen as a counter-intuitive for survival, making it more difficult to hide from and escape predators [@burk1982]. The same could be said for the cricket - producing a loud acoustic for an extended time could alert predators to the individual's location. However, this is exactly why it is so attractive to females of the species - If an individual can survive despite their handicap they must be of good fitness, a quality that females will want to pass on to their offspring [@andersson1986]. Individuals of greater fitness are more desireable mates, so acts that can display a male's fitness to females are crucial to their reproductive success, which includes song production in crickets.
 
 ```{r, echo=FALSE}
 knitr::include_graphics("../Graphs/triple_gradient_april23.png")
@@ -63,6 +63,6 @@ Fig.3 - The total song duration in seconds produced over 1 week by male decorate
 
 As this investigation found that greater nutrition corresponds with an increased song duration, maintaining a quality diet is important for the success of male crickets. Nutrition also facilitates weight gain which also increases a male's chance of winning over a mate, as not only are female *Gryllodes sigillatus* attracted to longer acoustic displays, but they also prefer the songs of bigger individuals [@kiflawi2000]. Whilst this was found to be true in regards to weight in this data, wherein the crickets consuming a more nutritional diet were both gaining more mass and generally producing a longer song, it was seen that size in terms of a cricket's length did not have a significant influence over song duration which may be a downfall of the data and require further investigation.
 
-It could be concluded from these results that the length of song produced by *Gryllodes sigillatus* males is what indicates their fitness and therefore potential as a mate to females of the species, so a longer song would increase an individual's chance of mating. It is known from previous research that individuals with a greater level of fitness require lower metabolic maintenance and are also better able to allocate resources [@ketola2009]. This means that fitter individuals would have more surplus resources to put towards the production of a signalling song, especially when on a highly nutritious diet. In this way, nutrition has an influence over the reproductive success of male *Gryllodes sigillatus*, due to an increased availability of resources available for complex mating behaviours once basic energetic needs are met.
+It could be concluded from these results that the length of song produced by *Gryllodes sigillatus* males is what indicates their fitness and therefore potential as a mate to females of the species, so a longer song would increase an individual's chance of mating. It is known from previous research that individuals with a greater level of fitness require lower metabolic maintenance and are also better able to allocate resources [@ketola2009]. This means that fitter individuals would have more surplus resources to put towards the production of a signalling song, especially when on a highly nutritious diet. In this way, nutrition has an influence over the reproductive success of male *Gryllodes sigillatus*, due to an increased availability of resources available for complex mating behaviours once basic energetic needs are met. A further investigation stemming from these results could look at a quantification of fitness compared to song duration to confirm the theory that singing demonstrates fitness.
 
 ### [**References**]{.underline}
