--- a/Scripts/references.bib
+++ b/Scripts/references.bib
@@ -212,3 +212,29 @@ url = {https://journals.co.za/doi/abs/10.10520/EJC17961},
 	url = {http://dx.doi.org/10.1111/j.1420-9101.2009.01689.x},
 	langid = {en}
 }
+
+@book{andersson1994,
+	title = {Sexual Selection},
+	author = {Andersson, Malte},
+	year = {1994},
+	month = {12},
+	date = {1994-12-31},
+	publisher = {Princeton University Press},
+	doi = {10.1515/9780691207278},
+	url = {http://dx.doi.org/10.1515/9780691207278}
+}
+
+@article{lande1981,
+	title = {Models of speciation by sexual selection on polygenic traits},
+	author = {Lande, Russell},
+	year = {1981},
+	month = {06},
+	date = {1981-06},
+	journal = {Proceedings of the National Academy of Sciences},
+	pages = {3721--3725},
+	volume = {78},
+	number = {6},
+	doi = {10.1073/pnas.78.6.3721},
+	url = {http://dx.doi.org/10.1073/pnas.78.6.3721},
+	langid = {en}
+}
