--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -12,7 +12,7 @@ Due to the importance of sexual signalling displays for a cricket's ability to r
 
 ### [**Analysis**]{.underline}
 
-The data-set used to investigate the hypotheses detailed above contains information collected over the course of a week pertaining to male crickets' nutrition, song duration, weight change, and size. R version 4.2.3 [@R] was used to analyse the data and investigate which of the recorded factors influence song duration.
+The data set used to investigate the hypotheses detailed above contains information collected over the course of a week pertaining to male crickets' nutrition, song duration, weight change, and size. R version 4.2.3 [@R] was used to analyse the data and investigate which of the recorded factors influence song duration.
 
 When investigating the minimum and maximum data points, a negative value for song duration became apparent. Believing this to be a typing error, the absolute values were used for song duration so as to avoid any impossible values. Only this variable was altered in such a way, as negative values are valid for other variables such as weight change.
 
@@ -37,9 +37,9 @@ knitr::include_graphics("../Graphs/dw_means_april23.png")
 
 ##### **DIET AND SONG DURATION**
 
-Based on the results above which illustrated a greater weight gain in crickets with a better diet, I further hypothesized that the group with higher nutrition would also have a greater song duration. This would likely be due to an increased amount of resources, meaning that once essential metabolic processes had been covered, more surplus energy would be available to allocate to the costly signalling action. To test this, I used an ordinary least squares linear model to compare song duration of crickets consuming diets of differing nutritional percentages, with diet as a predictor variable for total song duration in seconds over a week of observation. This showed that for each percentage increase in nutrition, the cricket sang for 0.031 seconds longer [95% CI; 0.025-0.037], meaning for each 12% incremental increase in dietary nutrition, song duration was extended by 0.37 seconds (Linear Model: *T*~1,536~ =5.26, *P*\<0.001) . Illustrated in Fig. 2, the mean song duration for those with a low nutritional intake (≤36% ) is 4.513 seconds, rising to an average of 7.393 for crickets with a high nutritional intake (≥60%).
+Based on the results above which illustrated a greater weight gain in crickets with a better diet, I further hypothesized that the group with higher nutrition would also have a greater song duration. This would likely be due to an increased amount of resources, meaning that once essential metabolic processes had been covered, more surplus energy would be available to allocate to the costly signalling action. To test this, I used an ordinary least squares linear model to compare the song duration of crickets consuming diets of differing nutritional percentages, with diet as a predictor variable for total song duration in seconds over a week of observation. This showed that for each percentage increase in nutrition, the cricket sang for 0.031 seconds longer [95% CI; 0.025-0.037], meaning for each 12% incremental increase in dietary nutrition, song duration was extended by 0.37 seconds (Linear Model: *T*~1,536~ =5.26, *P*\<0.001). Illustrated in Fig. 2, the mean song duration for those with a low nutritional intake (≤36% ) is 4.513 seconds, rising to an average of 7.393 for crickets with a high nutritional intake (≥60%).
 
-This is consistent with the previous knowledge on resource allocation [@ketola2009], as acoustic production in crickets is a highly energetic process which would require an abundance of resources derived from diet.
+This is consistent with the previous knowledge on resource allocation [@ketola2009], as acoustic production in crickets is a highly energetic process which would require an abundance of resources derived from their diet.
 
 ```{r, echo=FALSE}
 knitr::include_graphics("../Graphs/dd_means_april23.png")
@@ -52,7 +52,7 @@ knitr::include_graphics("../Graphs/dd_means_april23.png")
 
 Song length is significant as a male cricket's ability to sing for a greater duration than their peers has a great impact on their fitness, something which is facilitated by their nutrition. A longer song would suggest a greater chance of mating through the principles of sexual selection.
 
-Males of a species competing against each other for the opportunity to mate with a female is a common occurrence in nature [@cox1977; @lande1981; @andersson1994]. These competitions can manifest as direct antagonism where males get into a physical conflict. Such is the case with red deer, as growing larger antlers to fight with correlates to a greater level of reproductive success [@kruuk2002]. The other way that males can outshine their peers is through courtship displays which are aimed to impress the females, as is true of the singing behaviour found in *Gryllodes sigillatus*. Another well-known example of this includes male birds such as peacocks sporting a large ornamental plumage, a trait which is selected for by female choice [@lande1981]. In the wild, this colourful addition could be seen as a counter-intuitive for survival, making it more difficult to hide from and escape predators [@burk1982]. The same could be said for the cricket - producing a loud acoustic for an extended time could alert predators to the individual's location. However, this is exactly why it is so attractive to females of the species - If an individual can survive despite their handicap they must be of good fitness, a quality that females will want to pass on to their offspring [@andersson1986]. Individuals of greater fitness are more desireable mates, so acts that can display a male's fitness to females are crucial to their reproductive success, which includes song production in crickets.
+Males of a species competing against each other for the opportunity to mate with a female is a common occurrence in nature [@cox1977; @lande1981; @andersson1994]. These competitions can manifest as direct antagonism where males get into a physical conflict. Such is the case with red deer, as growing larger antlers to fight with correlates to a greater level of reproductive success [@kruuk2002]. The other way that males can outshine their peers is through courtship displays which are aimed to impress the females, as is true of the singing behaviour found in *Gryllodes sigillatus*. Another well-known example of this includes male birds such as peacocks sporting a large ornamental plumage, a trait which is selected for by female choice [@lande1981]. In the wild, this colourful addition could be seen as counter-intuitive for survival, making it more difficult to hide from and escape predators [@burk1982]. The same could be said for the cricket - producing a loud acoustic for an extended time could alert predators to the individual's location. However, this is exactly why it is so attractive to females of the species - If an individual can survive despite their handicap they must be of good fitness, a quality that females will want to pass on to their offspring [@andersson1986]. Individuals of greater fitness are more desirable mates, so acts that can display a male's fitness to females are crucial to their reproductive success, which includes song production in crickets.
 
 ```{r, echo=FALSE}
 knitr::include_graphics("../Graphs/triple_gradient_april23.png")
@@ -63,6 +63,6 @@ Fig.3 - The total song duration in seconds produced over 1 week by male decorate
 
 As this investigation found that greater nutrition corresponds with an increased song duration, maintaining a quality diet is important for the success of male crickets. Nutrition also facilitates weight gain which also increases a male's chance of winning over a mate, as not only are female *Gryllodes sigillatus* attracted to longer acoustic displays, but they also prefer the songs of bigger individuals [@kiflawi2000]. Whilst this was found to be true in regards to weight in this data, wherein the crickets consuming a more nutritional diet were both gaining more mass and generally producing a longer song, it was seen that size in terms of a cricket's length did not have a significant influence over song duration which may be a downfall of the data and require further investigation.
 
-It could be concluded from these results that the length of song produced by *Gryllodes sigillatus* males is what indicates their fitness and therefore potential as a mate to females of the species, so a longer song would increase an individual's chance of mating. It is known from previous research that individuals with a greater level of fitness require lower metabolic maintenance and are also better able to allocate resources [@ketola2009]. This means that fitter individuals would have more surplus resources to put towards the production of a signalling song, especially when on a highly nutritious diet. In this way, nutrition has an influence over the reproductive success of male *Gryllodes sigillatus*, due to an increased availability of resources available for complex mating behaviours once basic energetic needs are met. A further investigation stemming from these results could look at a quantification of fitness compared to song duration to confirm the theory that singing demonstrates fitness.
+It could be concluded from these results that the length of song produced by *Gryllodes sigillatus* males is what indicates their fitness and therefore potential as a mate to females of the species, so a longer song would increase an individual's chance of mating. It is known from previous research that individuals with a greater level of fitness require lower metabolic maintenance and are also better able to allocate resources [@ketola2009]. This means that fitter individuals would have more surplus resources to put towards the production of a signalling song, especially when on a highly nutritious diet. In this way, nutrition has influence over the reproductive success of male *Gryllodes sigillatus*, due to the increased availability of resources available for complex mating behaviours once basic energetic needs are met. A further investigation stemming from these results could look at a quantification of fitness compared to song duration to confirm the theory that singing demonstrates fitness.
 
 ### [**References**]{.underline}
